--- a/index.html
+++ b/index.html
@@ -7,12 +7,24 @@
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="style.css">
+        <script src="https://use.fontawesome.com/47183d5423.js"></script>
+        <link rel="stylesheet" href="CSS/style.css">
+        <script src="javascript/index.js"></script>
     </head>
 
     <body>
         
     <div id="section-landing">
+        <div id="landing-nav">
+            <i id="nav-logo" class="fa fa-free-code-camp fa-5x" aria-hidden="true"></i>
+            <div id="nav-menu">
+                <div class="menu-item" style="color: white">HOME</div>
+                <div class="menu-item">PROFILE</div>
+                <div class="menu-item">EXPERIENCE</div>
+                <div class="menu-item">PROJECTS</div>
+                <div class="menu-item" id="menu-contact">CONTACT</div>
+            </div>
+        </div>
         <div class="centered">
             <h1 id="landing-title" class="nova-bold">KEVIN ZHANG</h1>
             <h1 class="landing-lead">Student | Developer | Tech Lover</h1>
