--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
         
     <div id="section-landing">
         <div id="landing-nav">
-            <i id="nav-logo" class="fa fa-free-code-camp fa-5x" aria-hidden="true"></i>
+            <i id="nav-logo" class="fa fa-free-code-camp fa-4x" aria-hidden="true"></i>
             <div id="nav-menu">
                 <div class="menu-item" style="color: white">HOME</div>
                 <div class="menu-item">PROFILE</div>
                 <div class="menu-item">EXPERIENCE</div>
                 <div class="menu-item">PROJECTS</div>
+                <div class="menu-item">EDUCATION</div>
                 <div class="menu-item" id="menu-contact">CONTACT</div>
             </div>
         </div>
@@ -31,19 +32,93 @@
         </div>
     </div>
 
-    <div id="section-profile" class="section">
-        <h1 class="text-lead">Things I enjoy: coding, designing, and getting hammered</h1>
-        <p class="text-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <div id="section-profile" class="section container">
+        <h1 class="text-lead">Things I enjoy doing: coding, designing, and getting hammered.</h1>
+        <p class="text-content" id="profile-text">
+            I first started programming after watching a <a href="https://www.youtube.com/watch?v=dU1xS07N-FA"> youtube video</a>. This video changed my life. Forever.
+        </p>
     </div>
 
     <div id="section-experience" class="section">
-        <h1 class="text-lead">My practical experience</h1>
-        <p class="text-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <h1 class="text-lead" style="text-align: center;">Work and programming experience</h1>
+
+        <h1 class="text-lead2">SOFTWARE ENGINEER INTERN</h1>
+        <h1 class="text-lead3">TRANSAT A.T. | FALL 2016</h1>
+        <ul>
+            <li><p class="text-content" style="margin-bottom: 0;">Trained a collaborative filtering travel recommender using historical transaction and flight data.</p></li>
+            <li><p class="text-content" style="margin-bottom: 0;">Build a web application around the recommender system using BootStrap, PHP, MongoDB and Azure.</p></li>
+            <li><p class="text-content" style="margin-bottom: 0;">Training a deep learning algorithm using social media (Facebook, Instagram) data as feature space and vacation destinations as output space.</p></li>
+        </ul>
+        <h1 class="text-lead2">HACKER</h1>
+        <h1 class="text-lead3">CONUHACKS II | 2017</h1>
+        <ul>
+            <li><p class="text-content" style="margin-bottom: 0;">Used a vulnerability in one of Instagram's Android APIs to capture stories posted by public profiles.</p></li>
+            <li><p class="text-content" style="margin-bottom: 0;">Built an application using Ruby, Python, PHP, JavaScript, and jQuery to create group stories.</p></li>
+            <li><p class="text-content" style="margin-bottom: 0;">Came top 6 out of 80+ teams.</p></li>
+        </ul>
+
+        <h1 class="text-lead2">SALES ASSOCIATE</h1>
+        <h1 class="text-lead3">FOOTLOCKER CANADA | 2015-PRESENT</h1>
+        <ul>
+            <li><p class="text-content" style="margin-bottom: 0;">Achieved stellar sales metrics and provided excellent customer service.</p></li>
+            <li><p class="text-content" style="margin-bottom: 0;">Gained valuable team cooperation and social skills.</p></li>
+        </ul>
+
+        <h1 class="text-lead2">MERCHANDISER</h1>
+        <h1 class="text-lead3">DOLLARAMA CANADA | 2012-2014</h1>
+
     </div>
 
-    <div id="section-projects" class="section">
-        <h1 class="text-lead">Some of my projects</h1>
-        <p class="text-content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <div id="section-projects" class="container section">
+        <h1 class="text-lead">Some of my recent projects</h1>
+
+        <div class="row">
+        <div class="col-md-4 projects-project">
+            <img class="project-img" src="http://corpusdoportugues.org/images/home1.jpg">
+            <h1 class="text-lead2">TRENDSAT</h1>
+            <h1 class="text-lead3">COLLABORATIVE FILTERING TRAVEL RECOMMENDER SYSTEM</h1>
+        </div>
+        <div class="col-md-4 projects-project">
+            <img class="project-img" src="http://corpusdoportugues.org/images/home1.jpg">
+            <h1 class="text-lead2">TRELLO-SYNC</h1>
+            <h1 class="text-lead3">GROUP AND MERGE TRELLO LABELS BASED OFF FUZZY STRING MATCHING</h1>
+        </div>
+        <div class="col-md-4 projects-project">
+            <img class="project-img" src="http://corpusdoportugues.org/images/home1.jpg">
+            <h1 class="text-lead2">STORYFLOW</h1>
+            <h1 class="text-lead3">MULTI-USER STORIES ON INSTAGRAM</h1>
+        </div>
+        </div>
+        <div class="row">
+        <div class="col-md-4 projects-project">
+            <img class="project-img" src="http://corpusdoportugues.org/images/home1.jpg">
+            <h1 class="text-lead2">SPOILBLOCK</h1>
+            <h1 class="text-lead3">TV SPOILER BLOCKING CHROME EXTENSION</h1>
+        </div>
+        <div class="col-md-4 projects-project">
+            <img class="project-img" src="http://corpusdoportugues.org/images/home1.jpg">
+            <h1 class="text-lead2">TRIPPY</h1>
+            <h1 class="text-lead3">SOCIAL MEDIA TRAVEL BOT</h1>
+        </div>
+        <div class="col-md-4 projects-project">
+            <a href=""><img class="project-img" src="http://corpusdoportugues.org/images/home1.jpg"></a>
+            <h1 class="text-lead2">DOGAROO</h1>
+            <h1 class="text-lead3">PET ADOPTION WEBSITE</h1>
+        </div>
+        </div>
+
+    </div>
+
+    <div id="section-education" class="section">
+        <h1 class="text-lead" style="text-align: center;">Education</h1>
+        <h1 class="text-lead2">CONCORDIA UNIVERSITY</h1>
+        <h1 class="text-lead3">BEng Software Engineering | Montreal, Canada | 2015-2019</h1>
+        <ul>
+            <li><p class="text-content" style="margin-bottom: 0;">3.82 cumulative GPA</p></li>
+            <li><p class="text-content" style="margin-bottom: 0;">Concordia University Engineering and Computer Science 2016 Dean's List (85th percentile)</p></li>
+        </ul>
+        <h1 class="text-lead2">John Abbott College</h1>
+        <h1 class="text-lead3">DEC Pure and Applied Sciences | Montreal, Canada | 2013-2015</h1>
     </div>
 
     <div id="section-contact" class="section">
